--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pg",
+  "name": "pg7",
   "version": "7.4.1",
   "description": "PostgreSQL client - pure javascript & libpq with the same API",
   "keywords": [
